force-app/main/default/objects/Pharmacy__c/Pharmacy__c.object-meta.xml
<CustomObject>
    <label>Pharmacy</label>
    <nameField>
        <label>Pharmacy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>