force-app/main/default/objects/Pharmacy__c/fields/Medicine_1__c.field-meta.xml
<CustomField>
    <fullName>Medicine_1__c</fullName>
    <label>Medicine 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>