force-app/main/default/objects/Pharmacy__c/fields/Price_per_Tab__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Tab__c</fullName>
    <label>Price per Tab</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>