force-app/main/default/objects/Pharmacy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bill_Id__c</columns>
    <columns>Patient_Name__c</columns>
    <columns>Medicine_1__c</columns>
    <columns>Doctor_Name__c</columns>
    <columns>Medicine_2__c</columns>
    <columns>Quantity__c</columns>
    <columns>Price_per_Tab__c</columns>
    <columns>Paid_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>